# SD_learning_platform

./: .env.example  .gitignore  CLAUDE.md  CLAUDE_TEMPLATE.md  MVP_系統架構.md  README.md  docker-compose.prod.yml  docker-compose.yml
.claude/: README.md  SOP.md  claude-stats  claude-stats.go  settings.json  settings.local.json  statusline-go  statusline.go  ubuntu_development_setup.md
CONTRACT_TEMPLATES/: api_contract.yaml  course_platform_api_contract.yaml  course_platform_schemas.py  course_platform_types.ts  python_protocol.py  (+1 more)
backend/: .env.example  alembic.ini  main.py  pyproject.toml  requirements-test.txt  requirements.txt  seed_data.py
backend/alembic/: env.py
backend/alembic/versions/: 20260114_2118_c8add33956b8_initial_schema.py  a72f4d3cba46_initial_schema.py
backend/app/: __init__.py
backend/app/api/: deps.py
backend/app/api/v1/: __init__.py  auth.py  courses.py  enrollments.py  health.py  users.py  videos.py
backend/app/core/: __init__.py  config.py  database.py  deps.py  exceptions.py  security.py
backend/app/models/: __init__.py  audit.py  base.py  course.py  enrollment.py  oauth.py  order.py  review.py  user.py  video.py
backend/app/payment/: __init__.py  aio.py  models.py  router.py  schemas.py  service.py  utils.py
backend/app/payment/ecpay/: __init__.py  client.py  credit.py
backend/app/repositories/: course.py
backend/app/schemas/: __init__.py  auth.py  common.py  course.py  enrollment.py  user.py  video.py
backend/app/services/: course.py
backend/app/tasks/: __init__.py
backend/tests/: __init__.py  test_health.py
(+171 files in other folders)
